# blog-content

./: .gitignore  README.md
configuring-nginx/1.basic/: nginx.conf
configuring-nginx/10.monitoring/: docker-compose.yaml  nginx.conf
configuring-nginx/2.multiple-servers/: docker-compose.yaml  nginx.conf
configuring-nginx/3.serve-content/: nginx.conf
configuring-nginx/4.location/: nginx.conf
configuring-nginx/5.redirects-rewrites/: docker-compose.yaml  nginx.conf
configuring-nginx/7.reverse-proxy/: docker-compose.yaml  nginx.conf
configuring-nginx/8.load-balancing/: nginx.conf
configuring-nginx/9.rate-limiting/: nginx.conf
diagram-as-code/: .gitignore  compose.yaml  dockerfile
diagram-as-code/src/: diagram.py
docker-compose/: 01.compose.yaml
docker-compose/02.redis-app/: compose.yaml  server.py
docker-compose/03.redis-app/: compose.yaml
docker-compose/04.redis-app/: compose.yaml  secret.txt  server.py
docker-init/: Dockerfile
kubernetes-networking-concepts/: ingress-conf.yaml  network-policy.yaml
kubernetes-operator-app/: deploysyncer.yaml
mastering-linux-services/: custom_logger.service  log_message.sh
network-troubleshooting-with-linux/: dockerfile
python-package/03.create-package/got_spoiler/: LICENSE.txt  README.md  setup.cfg
python-package/03.create-package/got_spoiler/src/got_spoiler/: __init__.py  death.py  review.py
python-package/03.create-package/got_spoiler/test/: test_spoilers_review.py
python-subprocesses/: bscript.sh  popen.py  subp.py
ssl-tls-components/: docker-compose-remote.yaml  docker-compose.yaml
(+87 files in other folders)
