[metadata]
name = got_spoiler
version = 1.0.0
author = mythLabs
author_email = amitbisht744@gmail.com
description = A simple testing package
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/mythLabs
project_urls =
    Bug Tracker = https://github.com/mythLabs
    repository = https://github.com/mythLabs
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src